variables.Variables.scala.error
Compilation error:
Variables:9: error: not found: value dropBAggle
  dropBAggle()
  ^